fixed dark mode input color

--- a/client/public/css/dark_styles.css
+++ b/client/public/css/dark_styles.css
@@ -91,6 +91,10 @@ input:focus {
 input:hover {
     cursor: pointer;
 }
+.pac-item * {
+    color: black;
+}
+
 #load {
     width: 20vw;
     height: 20vh;
